# steam-library-rankings

./: .gitignore  LICENSE  MathUtils.py  README.md  SimpleRequest.py  SteamDataBokehGraphGenerator.py  SteamSpyQuery.py  SteamXmlProcessor.py  get-rankings.ipynb  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/: main.py
src/graphing/: SteamDataBokehGraphGenerator.py
src/main/: main.py
src/simplehttp/: SimpleHttpClient.py
src/steam/: SteamSpyQuery.py  SteamXmlProcessor.py
src/utils/: MathUtils.py
tests/: test_http.py
