[metadata]
name = simplehttp
description = Simple HTTP GET request
author = Jan Smrcina
license = MIT
license_file = LICENSE
platforms = win32
classifiers =
Programming Language :: Python :: 3.10

[options]
packages = simplehttp
install_requires = requests >=2
python_rquires = >=3.10
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
pytest >=6.0
pytest-cov >=2.0
mypy >=0.910
flake8 >=3.9
tox >=3.24

[options.package_data]
http = py.typed

[flake8]
max-line-length = 160
# E251 Allow spaces around kwargs
# W504 Allow line break after operator
# E126 Allow auto-formatter to over-indent on a continuation line
ignore = E251, W504, E126
